native working again

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,11 +3,9 @@ name = "buglympics"
 version = "1.0.0"
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-zingr={path="../zingr"}
+lentsys={path="../../projects/lentsys"}
 sdl2="*"
 
 [build-dependencies]
-zingr={path="../zingr"}
+lentsys={path="../../projects/lentsys", features=["io"]}
