--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,12 @@ edition = "2018"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
+console_error_panic_hook="*"
 lentsys={path="../../projects/lentsys"}
+wasm-bindgen = { version = "0.2.63", features = ["serde-serialize"]}
 
 [target.'cfg(not(all(target_arch = "wasm32", target_os = "unknown")))'.dependencies]
 sdl2="*"
 
+#[target.'cfg(not(target_arch = "wasm32"))'.build-dependencies]
+#lentsys={path="../../projects/lentsys", features = ["io"]}
