--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,10 @@ edition = "2018"
 [lib]
 crate-type = ["cdylib", "rlib"]
 
+[[bin]]
+name = "buglympics"
+path = "src/bin.rs"
+
 [dependencies]
 console_error_panic_hook="*"
 lentsys={path="../../projects/lentsys"}
